--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ public/uploads/*
 
 .byebug_history
 
-config/settings.local.yml
+# config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
 
-shared/*
+#shared/*
